--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,14 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div id="players">
+      <div id="playersContainer">
+      </div>
+    </div>
     <div class="values">
       <span>
         intersected:
         <span id="intersected"></span>
-      </span>
-      <br>
-      <span>
-        hits on enemy:
-        <span id="hits"></span>
       </span>
     </div>
     <div id="blocker">
