--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,17 @@
         intersected:
         <span id="intersected"></span>
       </span>
+      <br>
+      <span>
+        intersected player:
+        <span id="intersectedPlayer"></span>
+      </span>
+      <br>
+      <span>
+        my score:
+        <span id="myscore">0</span>
+      </span>
+      <br>
     </div>
     <div id="blocker">
 			<div id="instructions">
