--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="values">
-      <span>
+      <!--<span>
         intersected:
         <span id="intersected"></span>
       </span>
@@ -28,12 +28,11 @@
         intersected player:
         <span id="intersectedPlayer"></span>
       </span>
-      <br>
+      <br> -->
       <span>
-        my score:
-        <span id="myscore">0</span>
+        Ammo:
+        <span id="myammo">2</span>
       </span>
-      <br>
     </div>
     <div id="blocker">
 			<div id="instructions">
