--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <span id="intersectedPlayer"></span>
       </span>
       <br> -->
-      <span>
+      <span id="ammoUI">
         Ammo:
         <span id="myammo">2</span>
       </span>
