--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,13 @@
 				<span id="text" style="font-size:40px">Loading</span>
 			</div>
 		</div>
+    <div class="sensitivity" id="sensitivity">
+      Sensitivity
+      <span id="sensValue">1</span>
+      <div class="slider">
+        <input type="range" min="0.1" max="3" step="0.1" class="input" value="1" oninput="setSens(this.value)">
+      </div>
+    </div>
     <img id="crosshair" src="crosshair.png" alt="crosshair">
     <script src="game.js"></script>
   </body>
