--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>WebGL Multiplayer</title>
     <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <script src="libs/stats.min.js"></script>
     <script src="libs/three.min.js"></script>
@@ -18,27 +18,17 @@
       <div id="playersContainer">
       </div>
     </div>
-    <div class="values">
-      <!--<span>
-        intersected:
-        <span id="intersected"></span>
-      </span>
-      <br>
-      <span>
-        intersected player:
-        <span id="intersectedPlayer"></span>
-      </span>
-      <br> -->
-      <span id="ammoUI">
-        Ammo:
-        <span id="myammo">2</span>
-      </span>
-    </div>
+    <div id="ammoDisplay">
+	<div>
+	  <span id="ammoValue">2 </span>
+	  <span id="ammoMax"> / 2</span>
+	</div>
+      </div>
     <div id="blocker">
-			<div id="instructions">
-				<span id="text" style="font-size:40px">Loading</span>
-			</div>
-		</div>
+	<div id="instructions">
+	  <span id="text" style="font-size:40px">Loading</span>
+	</div>
+      </div>
     <div class="sensitivity" id="sensitivity">
       Sensitivity
       <span id="sensValue">1</span>
