--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!--<div class="values">
-      <span id="canJump">true</span>
-      <br>
-      <span id="testi">true</span>
-      <br>
-      <span id="testi2">true</span>
-    </div>-->
+    <div class="values">
+      <span id="onSurface">true</span>
+    </div>
     <div id="players">
       <div id="playersContainer">
       </div>
