--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="values">
+    <!--<div class="values">
       <span id="onSurface">true</span>
-    </div>
+    </div>-->
     <div id="players">
       <div id="playersContainer">
       </div>
